spec/fail/bad-library-names.scm
(define-library "hello")
(define-library .)
(define-library (some 't))